--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- add icon link -->
     <link rel ="icon" href ="https://internship.thesparksfoundation.info/assests/img/logo.png" type = "image/x-icon">
     <!-- linking css file -->
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" 
     integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 
